tests/type/bad/array_size_mismatch.hel
foreign io_unit: IO<()>;

x: [i32; 3] = [1, 2];

main = io_unit;
